--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+# Warning !
+*The developpement is currently suspended as I am working on bigger project*
+
 This discord bot make people from two differents servers meets each other by a linked channel for 24h
 this bot is still under developpement
 
